--- a/index.php.css
+++ b/index.php.css
@@ -77,15 +77,15 @@ p {
 	border: 1px solid black;
 }
 
-#pop_up {
-  display: none;
+/*#pop_up {
+
   position: absolute;
   z-index: 99;
   width: 100%;
   height: 100%;
   background-color: #FFFFFF;
   top: 0;
-}
+}*/
 
 .selected {
   background-color: rgba(0, 0, 255, 0.9);
