--- a/index.php.css
+++ b/index.php.css
@@ -105,14 +105,12 @@ td[td_modify_status="true"]{
   font-weight: bold;
 }
 
-td[name="created_at"], td[name="changed_at"]{
-  display: none;
-}
-th[name="created_at"], th[name="changed_at"]{
-  display: none;
-}
 
-*[name="product_id"]{
+*[name="created_at"], 
+*[name="changed_at"],
+*[name="admin_defined_order"],
+*[name="product_id"],
+*[name="people_id"]{
   display: none;
 }
 
